--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "boxicons": "^2.0.9",
     "clipboard-copy": "^3.1.0",
     "copy-to-clipboard": "^3.3.1",
     "history": "^4.7.2",
